<?xml version="1.0"?>
<package format="3">
  <name>bt_imu</name>
  <version>0.1.0</version>
  <description>ROS2 Python node for BWT901BLE5.0 IMU over BLE</description>
  <maintainer email="401435318@qq.com">unitree</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>bleak</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
