<?xml version="1.0"?>
<package format="3">
  <name>drone_estimator</name>
  <version>0.0.1</version>
  <description>Drone estimator node with SMXFusionEstimator</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend> <!-- ★ 新增：Marker 依赖 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
