<?xml version="1.0"?>
<package format="3">
  <name>rosbagtopic_rename</name>
  <version>0.0.1</version>
  <description>Offline tool to rename topics inside a rosbag2 bag.</description>

  <maintainer email="you@example.com">unitree</maintainer>
  <license>BSD-3-Clause</license>

  <!-- 这里声明用的是 ament_python，而不是 ament_cmake -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>pyyaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
